--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.flyway.url=${db.url}
 spring.flyway.user=${db.user}
 spring.flyway.password=${db.password}
 spring.flyway.schemas=jobportal
+# Server information
+server.password=SuperSecret
+server.port=${PORT:2222}
