--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
-<!--		DEV dependencies-->
+		<!-- DEV dependencies-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -78,7 +78,7 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<!--		TEST Dependencies -->
+		<!-- TEST Dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -91,6 +91,23 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>2.8.0</version>
+				<configuration>
+					<from>
+						<image>openjdk:8u282-jre-slim-buster</image>
+					</from>
+					<to>
+						<image>docker.pkg.github.com/andraspatka/JobPortalBE/jobportal:${env.TAG_NAME}</image>
+						<auth>
+							<username>${env.GITHUB_USER}</username>
+							<password>${env.GITHUB_TOKEN}</password>
+						</auth>
+					</to>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
