--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ notifications:
 before_install:
   - chmod +x mvnw
   - COMMITS_SINCE_MAIN=$(git rev-list --count HEAD ^main)
-  - TAG_NAME=$(echo "${TRAVIS_BRANCH}-m.${COMMITS_SINCE_MAIN}")
+  - TAG_NAME="${TRAVIS_BRANCH}-m.${COMMITS_SINCE_MAIN}"
+  - VERSION_NAME="0.0.1-${TAG_NAME}"
+  - mvnw versions:set -DnewVersion="${VERSION_NAME}"
 
 os: linux
 dist: bionic
