--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - COMMITS_SINCE_MAIN=$(git rev-list --count HEAD ^main)
   - TAG_NAME="${TRAVIS_BRANCH}-m.${COMMITS_SINCE_MAIN}"
   - VERSION_NAME="0.0.1-${TAG_NAME}"
-  - mvnw versions:set -DnewVersion="${VERSION_NAME}"
+  - ./mvnw versions:set -DnewVersion="${VERSION_NAME}"
 
 os: linux
 dist: bionic
