--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,9 @@ notifications:
 
 before_install:
   - chmod +x mvnw
-  - COMMITS_SINCE_MAIN=$(git rev-list --count HEAD ^main)
+  - COMMITS_SINCE_MAIN=$(git rev-list --count HEAD)
   - TAG_NAME="${TRAVIS_BRANCH}-m.${COMMITS_SINCE_MAIN}"
   - VERSION_NAME="0.0.1-${TAG_NAME}"
-  - echo "Version ${VERSION_NAME}"
   - ./mvnw versions:set -DnewVersion="${VERSION_NAME}"
 
 os: linux
