--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
 			<artifactId>spring-plugin-core</artifactId>
 			<version>2.0.0.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.river.examples/hello-api -->
+		<dependency>
+			<groupId>org.apache.river.examples</groupId>
+			<artifactId>hello-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
