--- a/pom.xml
+++ b/pom.xml
@@ -124,23 +124,23 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<groupId>com.google.cloud.tools</groupId>
-				<artifactId>jib-maven-plugin</artifactId>
-				<version>2.8.0</version>
-				<configuration>
-					<from>
-						<image>openjdk:8u282-jre-slim-buster</image>
-					</from>
-					<to>
-						<image>ghcr.io/andraspatka/jobportalbe:${version}</image>
-						<auth>
-							<username>${env.GITHUB_USER}</username>
-							<password>${env.GITHUB_TOKEN}</password>
-						</auth>
-					</to>
-				</configuration>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>com.google.cloud.tools</groupId>-->
+<!--				<artifactId>jib-maven-plugin</artifactId>-->
+<!--				<version>2.8.0</version>-->
+<!--				<configuration>-->
+<!--					<from>-->
+<!--						<image>openjdk:8u282-jre-slim-buster</image>-->
+<!--					</from>-->
+<!--					<to>-->
+<!--						<image>ghcr.io/andraspatka/jobportalbe:${version}</image>-->
+<!--						<auth>-->
+<!--							<username>${env.GITHUB_USER}</username>-->
+<!--							<password>${env.GITHUB_TOKEN}</password>-->
+<!--						</auth>-->
+<!--					</to>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
 			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
