--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,15 @@
 			<groupId>org.openapitools</groupId>
 			<artifactId>openapi-generator</artifactId>
 			<version>${openapi.generator.version}</version>
+<!--			Multiple implementations of SLF4J cause runtime errors. Excluding this transient dependency fixes the problem. -->
+<!--			java.lang.IllegalArgumentException: LoggerFactory is not a Logback LoggerContext but Logback is on the classpath. Either remove Logback or the competing implementation (class org.slf4j.impl.SimpleLoggerFac
+tory loaded from file:/app/libs/slf4j-simple-1.7.30.jar). -->
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-simple</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!--SpringFox dependencies -->
 		<dependency>
@@ -130,15 +139,21 @@
 				<version>2.8.0</version>
 				<configuration>
 					<from>
-						<image>openjdk:8u282-jre-slim-buster</image>
+						<image>openjdk:11.0.10-jdk-slim</image>
 					</from>
 					<to>
-						<image>ghcr.io/andraspatka/jobportalbe:${version}</image>
-						<auth>
-							<username>${env.GITHUB_USER}</username>
-							<password>${env.GITHUB_TOKEN}</password>
-						</auth>
+<!--						<image>ghcr.io/andraspatka/jobportalbe:${version}</image>-->
+						<image>jobportal</image>
+<!--						<auth>-->
+<!--							<username>${env.GITHUB_USER}</username>-->
+<!--							<password>${env.GITHUB_TOKEN}</password>-->
+<!--						</auth>-->
 					</to>
+					<container>
+						<ports>
+							<port>2222</port>
+						</ports>
+					</container>
 				</configuration>
 			</plugin>
 			<plugin>
