ci: added heroku deploy configs

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,15 @@ jdk: openjdk11
 script:
   - ./mvnw test
   - ./mvnw compile jib:build -Dversion="${VERSION_NAME}"
+
+deploy:
+  provider: script
+  script:
+    curl https://cli-assets.heroku.com/install.sh | sh;  #install heroku
+    docker login --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY registry.heroku.com;  #login to registry.heroku.com
+    docker push registry.heroku.com/$HEROKU_APP/web;
+    heroku container:release web --app $HEROKU_APP
+    git tag -a v0.0.1 -m "Release v0.0.1"
+    git push
+  on:
+    branch: herokudeploy
