--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
 
 deploy:
   provider: script
-  script: deploy.sh
+  script: bash deploy.sh
   skip_cleanup: true
   on:
     branch: herokudeploy
