--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=jobportal
 # Datasource
-database.url=jdbc:postgresql://localhost:5432/postgres
+db.url=jdbc:postgresql://localhost:5432/postgres
 db.user=postgres
 db.password=p0stgres
-spring.datasource.url=${database.url}
+spring.datasource.url=${db.url}
 spring.datasource.username=${db.user}
 spring.datasource.password=${db.password}
 # JPA
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 # Flyway
-spring.flyway.url=${database.url}
+spring.flyway.url=${db.url}
 spring.flyway.user=${db.user}
 spring.flyway.password=${db.password}
 spring.flyway.schemas=jobportal
