--- a/pom.xml
+++ b/pom.xml
@@ -146,9 +146,9 @@ tory loaded from file:/app/libs/slf4j-simple-1.7.30.jar). -->
 						<image>openjdk:11.0.10-jdk-slim</image>
 					</from>
 					<to>
-						<image>registry.heroku.com/jobportal-be/web</image>
+						<image>registry.heroku.com/jobportal-be/web:${version}</image>
 						<auth>
-							<username>_</username>
+							<username>${env.HEROKU_LOGIN}</username>
 							<password>${env.HEROKU_API_KEY}</password>
 						</auth>
 					</to>
