--- a/pom.xml
+++ b/pom.xml
@@ -159,19 +159,20 @@ tory loaded from file:/app/libs/slf4j-simple-1.7.30.jar). -->
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
 				<executions>
-					<!--			TODO Uncomment this if you want to see the OPEN API example-->
-					<!--					<execution>-->
-<!--						<goals>-->
-<!--							<goal>generate</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<inputSpec>${project.basedir}/src/main/resources/openapi/example.json</inputSpec>-->
-<!--							<output>${project.build.directory}/generated-sources</output>-->
-<!--							<apiPackage>${openapi.package}.api</apiPackage>-->
-<!--							<modelPackage>${openapi.package}.model</modelPackage>-->
-<!--						</configuration>-->
-<!--					</execution>-->
 					<execution>
+						<id>helloworld</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>${project.basedir}/src/main/resources/openapi/example.json</inputSpec>
+							<output>${project.build.directory}/generated-sources</output>
+							<apiPackage>${openapi.package}.api</apiPackage>
+							<modelPackage>${openapi.package}.model</modelPackage>
+						</configuration>
+					</execution>
+					<execution>
+						<id>jobportal</id>
 						<goals>
 							<goal>generate</goal>
 						</goals>
