cicd: added --no-transfer-progress flag to maven

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ os: linux
 dist: bionic
 jdk: openjdk11
 script:
-  - ./mvnw test
+  - ./mvnw test --no-transfer-progress
 
 deploy:
   provider: script
