config: read jwt secret and cors allowed origin from app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.flyway.password=${db.password}
 spring.flyway.schemas=jobportal
 # Server information
 server.port=${PORT:2222}
+
+# Security
+security.jwt.secret=SuperSecret
+security.cors.allowed-origin=http://localhost:4200
