--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=jobportal
 db.url=jdbc:postgresql://localhost:5432/postgres
 db.user=postgres
 db.password=p0stgres
-spring.datasource.url=${db.url}
+spring.datasource.url=${db.url}?currentSchema=jobportal
 spring.datasource.username=${db.user}
 spring.datasource.password=${db.password}
 # JPA
